# AI-climate-overview

./: .gitignore  README.md  emissions.csv  main.py  notebook.db  pyproject.toml
.streamlit/: config.toml
app/: GHG_emissions_page.py  GHG_result_page.py  about_page.py  app.py  energy_result_page.py  energy_use_page.py  general_overview_page.py  project_query_page.py  research_result_page.py  research_topic_page.py  result_dashboard_page.py  start_page.py
app/prompts/: emissions_research_prompt.txt  energy_research_prompt.txt  research_prompt.txt  specific_project_prompt.txt
codecarbon_logs/: emissions_31_july_summarization.csv  emissions_6_aug_result_dashboard.csv
data/Ember/: ember_monthly_carbon-intensity-europe.csv  ember_monthly_carbon-intensity-us.csv  ember_monthly_carbon-intensity-world.csv
scripts/: energy_calculations.py  get_carbon_data.py  tavily_research_openai.py
