[project]
name = "ai-climate-overview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codecarbon>=3.0.4",
    "docx>=0.2.4",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.5",
    "langgraph>=0.5.2",
    "matplotlib>=3.10.3",
    "openai>=1.93.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
